--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-dev": "nodemon -e ts,json src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,9 @@
     "sequelize": "^6.35.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.1",
+    "@types/sequelize": "^4.28.19",
     "nodemon": "^3.0.1"
   }
 }
