--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.1",
     "@types/sequelize": "^4.28.19",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "typescript": "^5.3.2"
   }
 }
