--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "set NODE_ENV=test& jest --runInBand",
     "start-dev": "nodemon -e ts,json src/server.ts"
   },
   "keywords": [],
@@ -23,11 +23,16 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.1",
     "@types/sequelize": "^4.28.19",
     "@types/sharp": "^0.32.0",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.2"
   }
 }
